processed/gerrit/txt/51765.txt
Change:     51765
Subject:    LU-16980 build: fix gcc-12 [-Werror=format-truncation=] error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/51765
Change-Id:  I514a1022d879f8b7af89f6ded68e9b453cd11408
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2023-07-26 09:54:47.000000000
Updated:    2023-08-07 03:50:34.000000000
Patch Set:  3
Insertions: +18
Deletions:  -9
Comments:   8 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Jian Yu, Timothy Day

--- Commit Message ---
LU-16980 build: fix gcc-12 [-Werror=format-truncation=] error

This patch fixes the following [-Werror=format-truncation=] errors
detected by gcc 12:

liblnetconfig.c: In function 'open_sysfs_file':
liblnetconfig.c:106:49: error: '%s' directive output may be truncated
writing up to 127 bytes into a region of size between 1 and 128
[-Werror=format-truncation=]
  106 |         snprintf(filename, sizeof(filename), "%s%s",
      |                                                 ^~

lfs_project.c: In function 'lfs_project_handle_dir':
lfs_project.c:324:50: error: '%s' directive output may be truncated
writing up to 255 bytes into a region of size between 1 and 4095
[-Werror=format-truncation=]
  324 |                 snprintf(fullname, PATH_MAX, "%s/%s", pathname,
      |                                                  ^~

statx.c: In function 'do_dir_list':
statx.c:1427:58: error: '%s' directive output may be truncated
writing up to 255 bytes into a region of size between 1 and 4095
[-Werror=format-truncation=]
 1427 |                         snprintf(fullname, PATH_MAX, "%s/%s",
      |                                                          ^~

Change-Id: I514a1022d879f8b7af89f6ded68e9b453cd11408
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/51765
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2023-07-26 09:54:47.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-07-26 09:59:06.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-07-26 10:32:06.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/96436/ : SUCCESS

--- Message (Autotest, 2023-07-27 00:23:21.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-dne-part-6 session on el8.8-x86_64/ldiskfs servers and clients for build 96436 patch 1. Requested by jianyu because of LU-16982.

--- Message (Autotest, 2023-07-27 00:38:31.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-dne-part-3 session on el8.8-x86_64/ldiskfs servers and clients for build 96436 patch 1. Requested by jianyu because of LU-16968.

--- Message (Andreas Dilger, 2023-07-27 10:58:24.000000000) ---
Patch Set 1: Code-Review-1

(5 comments)

I think this patch is going in the wrong direction, and all the warning means is that we need to pass a length shorter than the buffer size to snprintf() so that there is always room for the trailing NUL.

--- Message (Jian Yu, 2023-07-28 10:47:57.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Andreas Dilger, 2023-07-29 08:37:26.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Jian Yu, 2023-07-31 09:04:41.000000000) ---
Uploaded patch set 2.

--- Message (Jian Yu, 2023-07-31 09:04:55.000000000) ---
Patch Set 2:

(1 comment)

--- Message (wc-checkpatch, 2023-07-31 09:07:52.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Andreas Dilger, 2023-07-31 09:26:09.000000000) ---
Patch Set 2: Code-Review+1

--- Message (jenkins, 2023-07-31 09:38:07.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/96531/ : SUCCESS

--- Message (Autotest, 2023-07-31 15:53:08.000000000) ---
Patch Set 2:

Trevis Autotest retesting enforced review-zfs session on el8.8-x86_64/zfs servers and clients for build 96531 patch 2. Requested by jianyu because of LU-15461.

--- Message (Autotest, 2023-07-31 16:14:47.000000000) ---
Patch Set 2:

Onyx Autotest retesting enforced review-dne-zfs-part-5 session on el8.8-x86_64/zfs servers and clients for build 96531 patch 2. Requested by jianyu because of LU-8622.

--- Message (Timothy Day, 2023-07-31 21:02:03.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2023-08-07 03:50:31.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2023-08-07 03:50:34.000000000) ---
Change has been successfully cherry-picked as 347cf32326a5be282e311f140cdc850bde46176b by Oleg Drokin
